--- a/selab/login/join.html
+++ b/selab/login/join.html
@@ -17,7 +17,7 @@
 				<input class="textfield" type="text" name="num" placeholder = "Student Number"/>
 				<input class="textfield" type="text" name="class" placeholder= "class"/>
 				<input class="textfield" type="password" name="password" placeholder= "password"/>
-				<input class="submit_button" type="submit" value="sign in"/>
+				<input class="submit_button" type="submit" value="sign up"/>
 			</form>
 		</div>
 		<div class="side">
