modify gallery page & add sliders

--- a/selab/gallery/index.html
+++ b/selab/gallery/index.html
@@ -29,23 +29,20 @@
 <body>
 	<div id="modal" class="modal">
 		<div class="dropdown">
-			<button id="sharebtn">SHARE</button>
-			<div class="dropdown-content">
+		<!-- 	<button id="sharebtn">SHARE</button> -->
+			<a href="#" id="facebook"><img src="imgs/facebook.png"></a>
+			<a href="#" id="twitter"><img src="imgs/twitter.png"></a>
+			<a href="#" id="kakao"><img src="imgs/kakaolink_btn_medium_ov.png"></a>
+			<!-- <div class="dropdown-content">
 				<a href="#" id="facebook">Facebook</a>
 				<a href="#" id="twitter">Twitter</a>
 				<a href="#" id="kakao">Kakao</a>
-			</div>
+			</div> -->
 		</div>
-	<!-- 	<p>SHARE IT!</p>
-		<button id="twitter">TWITTER</button>
-		<button id="facebook">FACEBOOK</button>
-		<button id="kakao">Kakao</button> -->
 		<span class="close">&times;</span>
-		<!-- Modal Content (The Image) -->
-		<img class="modal-content" id="imgM">
-
-		<!-- Modal Caption (Image Text) -->
-		<!-- <div id="caption"></div> -->
+		<a class="prev" onclick="plusSlides()">&#10094;</a>
+		<a class="next" onclick="minusSlides()">&#10095;</a>
+		<img class="modal-content" id="imgM"> <!-- image modal content -->
 	</div>
 
 	<header role="banner" class="header">
