change myteam, mypage css

--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -23,6 +23,9 @@
 	</head>
 
 	<body>
+		<?php
+			session_start();
+		?>
 		<header role="banner" class="header">
 			<div class="container">
 				<nav>
