--- a/selab/publications/index.html
+++ b/selab/publications/index.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+	<?php
+		session_start();
+	?>
 	<header role="banner" class="header">
 		<div class="container">
 			<nav>
@@ -32,7 +35,14 @@
 				</div>
 				<a id="setting" class="pull-right" href="javascript:settingview();"> <img src="../common/images/color_lens-24px.svg" alt="customize"> </a>
 				<div role="login" class="pull-right">
-					<a href="../login/index4e7d.html?source=/index.php"> <img src="../common/images/vpn_key-24px.svg" alt="login"> </a>
+					<?php
+						if(isset($_SESSION["ID"])){ ?>
+							<a href="../../../login/logout.php"> <img src="../../../common/images/logout.svg" alt="logout" onclick="logout()"> </a>
+						<?php }else{ ?>
+							<a href="../../../login/index4e7d.html"> <img src="../../../common/images/vpn_key-24px.svg" alt="login"> </a>
+						<?php
+						}
+					?>
 				</div>
 				<a id="contact" href="../contact/index.html" class='pull-right'> <img src="../common/images/phone-24px.svg" alt="contact"> </a>
 			</nav>
