--- a/selab/index.html
+++ b/selab/index.html
@@ -17,8 +17,8 @@
 	<script type="text/javascript" src="common/scripts/buffered-keyup.js"></script>
 	<script type="text/javascript" src="common/scripts/common.js"></script>
 	<script type="text/javascript" src="home/scripts/changeOrder.js"></script>
-
-
+	<script type="text/javascript" src="common/scripts/loadsetting.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js" type="text/javascript"></script>
 </head>
 
 <body>
