--- a/selab/index.html
+++ b/selab/index.html
@@ -15,10 +15,17 @@
 	<script type="text/javascript" src="common/scripts/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="common/scripts/jquery-ui.js"></script>
 	<script type="text/javascript" src="common/scripts/buffered-keyup.js"></script>
-	<script type="text/javascript" src="common/scripts/common.js"></script>
 	<script type="text/javascript" src="home/scripts/changeOrder.js"></script>
+	<script type="text/javascript" src="common/scripts/common.js"></script>
 	<script type="text/javascript" src="common/scripts/loadsetting.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js" type="text/javascript"></script>
+	
+	<script type="text/javascript">
+		jQuery.noConflict();
+		var j$ = jQuery;
+	</script>
+	
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js" type="text/javascript"></script> -->
+
 </head>
 
 <body>
