--- a/selab/index.html
+++ b/selab/index.html
@@ -24,7 +24,7 @@
 		var j$ = jQuery;
 	</script>
 	
-	<!-- <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js" type="text/javascript"></script> -->
+	<script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.3.0/prototype.js" type="text/javascript"></script>
 
 </head>
 
