--- a/selab/contact/index.html
+++ b/selab/contact/index.html
@@ -20,6 +20,10 @@
 		<script type="text/javascript" src="../common/scripts/common.js"></script>
 		<script type="text/javascript" src="scripts/js"></script>
 		<script type="text/javascript" src="scripts/contact.js"></script>
+		<script type="text/javascript">
+			jQuery.noConflict();
+			var j$ = jQuery;
+		</script>
 	</head>
 
 	<body>
